--- a/src/IcuEC/IcuEC 2010.csproj
+++ b/src/IcuEC/IcuEC 2010.csproj
@@ -101,6 +101,10 @@
     <Compile Include="..\icu4net\ICU4NETExtension\IcuBreakIteratorEncConverter.cs">
       <Link>IcuBreakIteratorEncConverter.cs</Link>
     </Compile>
+    <Compile Include="IcuBreakIteratorAutoConfigDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="IcuBreakIteratorConfig.cs" />
     <Compile Include="IcuConvAutoConfigDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -141,6 +145,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="IcuBreakIteratorAutoConfigDialog.resx">
+      <DependentUpon>IcuBreakIteratorAutoConfigDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="IcuConvAutoConfigDialog.resx">
       <DependentUpon>IcuConvAutoConfigDialog.cs</DependentUpon>
     </EmbeddedResource>
