--- a/Makefile.in
+++ b/Makefile.in
@@ -43,7 +43,7 @@ NUGET_URL = https://dist.nuget.org/win-x86-commandline/v3.4.4/nuget.exe
 all: debug
 
 download_nuget:
-ifneq ($(EC_DOWNLOAD_DEPS), false)
+ifneq ($(EC_DOWNLOAD_NUGETEXE), false)
 	build/multitry wget -O build/nuget.exe $(NUGET_URL) || build/multitry curl -o build/nuget.exe -L $(NUGET_URL)
 endif
 
